syntax = "proto3";

package cafm.project.lookup.organization;

import "user.proto";
import "role.proto";
import "organization.proto";
import "project.proto";

message OrganizationLookup {
  repeated cafm.project.user.User users = 1;
  repeated cafm.project.role.Role roles = 2;
  cafm.project.organization.Organization organization = 3;
  repeated cafm.project.project.Project projects = 4;
}