syntax = "proto3";

package cafm.project.lookup;

import "project/lookup/organization_includes_users_include_roles.proto";

message ProjectIncludesOrganizationsIncludeUsersIncludeRoles {
  string id = 1;
  string name = 2;
  int32 city_id = 3;
  int32 country_id = 4;
  int32 start_date = 5;
  string beneficiary_id = 6;
  string address_line = 7;
  string state = 8;
  string address_line_two = 9;
  string developer_name = 10;
  int32 developer_city_id = 11;
  int32 developer_country_id = 12;
  string developer_address_line_one = 13;
  string developer_address_line_two = 14;
  string developer_contact = 15;
  string developer_email = 16;
  string developer_phone_number = 17;
  string developer_warranty = 18;
  string postal_code = 19;
  string developer_postal_code = 20;
  string country_state_name = 21;
  string country_state_iso_code = 22;
  string developer_country_state_name = 23;
  string developer_country_state_iso_code = 24;
  int32 created_at = 25;
  int32 modified_at = 26;
  repeated OrganizationIncludesUsersIncludeRoles organizations_include_users_include_roles = 27;
}