/*
The file is generated by a scaffold script then modified manually
@author: Arkan M. Gerges<arkan.m.gerges@gmail.com>
*/


syntax = "proto3";

package cafm.project.project;

import "project/project.proto";
import "project/project_statistic.proto";
import "project/building.proto";
import "project/building_level.proto";
import "project/building_level_room.proto";
import "order.proto";
import "filter.proto";

message ProjectAppService_projectByIdRequest {
  string id = 1;
}

message ProjectAppService_projectByIdResponse {
  Project project = 1;
}

message ProjectAppService_projectsRequest {
  int32 result_from = 1;
  int32 result_size = 2;
  repeated cafm.common.order.Order orders = 3;
}

message ProjectAppService_projectsResponse {
  repeated Project projects = 1;
  int32 total_item_count = 2;
}

message ProjectAppService_projectsByOrganizationIdRequest {
  string organization_id = 1;
  int32 result_from = 2;
  int32 result_size = 3;
  repeated cafm.common.order.Order orders = 4;
}

message ProjectAppService_projectsByOrganizationIdResponse {
  repeated Project projects = 1;
  int32 total_item_count = 2;
}

message ProjectAppService_newIdRequest {}

message ProjectAppService_newIdResponse {
  string id = 1;
}

message ProjectAppService_newBuildingIdRequest {}

message ProjectAppService_newBuildingIdResponse {
  string id = 1;
}

message ProjectAppService_newBuildingLevelIdRequest {}

message ProjectAppService_newBuildingLevelIdResponse {
  string id = 1;
}

message ProjectAppService_newBuildingLevelRoomIdRequest {}

message ProjectAppService_newBuildingLevelRoomIdResponse {
  string id = 1;
}

message ProjectAppService_projectsByStateRequest {
  string state = 1;
  int32 result_from = 2;
  int32 result_size = 3;
  repeated cafm.common.order.Order orders = 4;
}

message ProjectAppService_projectsByStateResponse {
  repeated Project projects = 1;
  int32 total_item_count = 2;
}

message ProjectAppService_buildingsRequest {
  int32 result_from = 1;
  int32 result_size = 2;
  repeated cafm.common.order.Order orders = 3;
  repeated string include = 4;
  string project_id = 5;
}

message ProjectAppService_buildingsResponse {
  repeated Building buildings = 1;
  int32 total_item_count = 2;
}

message ProjectAppService_buildingByIdRequest {
  string id = 1;
  repeated string include = 2;
}

message ProjectAppService_buildingByIdResponse {
  Building building = 1;
}

message ProjectAppService_buildingLevelsRequest {
  int32 result_from = 1;
  int32 result_size = 2;
  repeated cafm.common.order.Order orders = 3;
  repeated string include = 4;
  string building_id = 5;
}

message ProjectAppService_buildingLevelsResponse {
  repeated BuildingLevel building_levels = 1;
  int32 total_item_count = 2;
}

message ProjectAppService_buildingLevelByIdRequest {
  string id = 1;
  repeated string include = 2;
}

message ProjectAppService_buildingLevelByIdResponse {
  BuildingLevel building_level = 1;
}

message ProjectAppService_buildingLevelRoomsRequest {
  int32 result_from = 1;
  int32 result_size = 2;
  repeated cafm.common.order.Order orders = 3;
  string building_level_id = 4;
}

message ProjectAppService_buildingLevelRoomsResponse {
  repeated BuildingLevelRoom building_level_rooms = 1;
  int32 total_item_count = 2;
  string building_level_id = 3;
}

message ProjectAppService_buildingLevelRoomByIdRequest {
  string id = 1;
}

message ProjectAppService_buildingLevelRoomByIdResponse {
  BuildingLevelRoom building_level_room = 1;
}

message ProjectAppService_statisticsRequest {
  int32 result_from = 1;
  int32 result_size = 2;
  repeated cafm.common.filter.Filter filters = 4;
}

message ProjectAppService_statisticsResponse {
  repeated ProjectStatistic statistics = 1;
  int32 total_item_count = 2;
}

service ProjectAppService {
  rpc projects_by_organization_id (ProjectAppService_projectsByOrganizationIdRequest) returns (ProjectAppService_projectsByOrganizationIdResponse) {}
  rpc buildings (ProjectAppService_buildingsRequest) returns (ProjectAppService_buildingsResponse) {}
  rpc building_by_id (ProjectAppService_buildingByIdRequest) returns (ProjectAppService_buildingByIdResponse) {}
  rpc building_levels (ProjectAppService_buildingLevelsRequest) returns (ProjectAppService_buildingLevelsResponse) {}
  rpc building_level_by_id (ProjectAppService_buildingLevelByIdRequest) returns (ProjectAppService_buildingLevelByIdResponse) {}
  rpc building_level_rooms (ProjectAppService_buildingLevelRoomsRequest) returns (ProjectAppService_buildingLevelRoomsResponse) {}
  rpc building_level_room_by_id (ProjectAppService_buildingLevelRoomByIdRequest) returns (ProjectAppService_buildingLevelRoomByIdResponse) {}
  rpc new_building_id (ProjectAppService_newBuildingIdRequest) returns (ProjectAppService_newBuildingIdResponse) {}
  rpc new_building_level_id (ProjectAppService_newBuildingLevelIdRequest) returns (ProjectAppService_newBuildingLevelIdResponse) {}
  rpc new_building_level_room_id (ProjectAppService_newBuildingLevelRoomIdRequest) returns (ProjectAppService_newBuildingLevelRoomIdResponse) {}
  rpc project_by_id (ProjectAppService_projectByIdRequest) returns (ProjectAppService_projectByIdResponse) {}
  rpc projects (ProjectAppService_projectsRequest) returns (ProjectAppService_projectsResponse) {}
  rpc projects_by_state (ProjectAppService_projectsByStateRequest) returns (ProjectAppService_projectsByStateResponse) {}
  rpc new_id (ProjectAppService_newIdRequest) returns (ProjectAppService_newIdResponse) {}
  rpc statistics(ProjectAppService_statisticsRequest) returns (ProjectAppService_statisticsResponse) {}
}
